|#1138| +Rahul J | not showing error messages for skipped rnrLineItems, also fixed css class for skip column in the rnr form

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -2527,7 +2527,7 @@ input[rnr-validator="positiveInteger"] {
   th.col-product, td.col-product {
     min-width: 250px;
   }
-  th.col-skip, td.col-skip {
+  th.col-skipped, td.col-skipped {
     min-width: 40px;
     width: 40px;
   }
